--- a/lib/blog_web/controllers/post_html/show.html.heex
+++ b/lib/blog_web/controllers/post_html/show.html.heex
@@ -14,4 +14,12 @@
   <:item title="Content"><%= @post.content %></:item>
 </.list>
 
+<.simple_form :let={f} for={@comment_changeset} action={~p"/comments"}>
+  <.input type="hidden" field={f[:post_id]} value={@post.id} />
+  <.input field={f[:content]} type="text" label="Content" />
+  <:actions>
+    <.button>Comment</.button>
+  </:actions>
+</.simple_form>
+
 <.back navigate={~p"/posts"}>Back to posts</.back>
